Made auto-progress fixes Put showed desired in menu Decreased spacing in between toggle + text If binary is toggled off, output icons still present

--- a/style.css
+++ b/style.css
@@ -813,7 +813,7 @@ span {
     border-color: lightslategray;
     margin: auto;
     line-height: 1em;
-    width: 300px;
+    width: 260px;
 
 }
 
@@ -881,7 +881,7 @@ select option:checked {
     position: absolute;
     top: 100%;
     left: 0;
-    width: 300px;
+    width: 260px;
     background-color: #f9f9f9;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
     padding: 16px;
@@ -950,5 +950,6 @@ span.guess-comment {
 }
 .menu-row-container {
     display: flex;
-    justify-content: space-between;
+    justify-content: right;
+    margin-right: 25%;
 }
